--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "mqtt": "1.6.3",
     "once": "1.3.3",
     "seq": "0.3.5",
-    "sqlite3": "3.1.1",
+    "sqlite3": "^4.0.4",
     "squel": "4.2.2",
     "yargs": "3.31.0"
   }
